# virtualbow

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Changelog.md  Checklist.md  ISSUES.md  ISSUES.txt  README.md  RELEASE.md  Readme.md  Release.md  Todo.txt  application.pro  azure-pipelines.yml  bow-design-simulator.pro  build.py  project.pro  setenv.bat  shared.pri  tests.pro
gui/: CMakeLists.txt
gui/resources/: resources.qrc
gui/resources/docs/user-manual/: 404.html  appendix-model-files.html  appendix.html  model-editor-comments.html  model-editor-layers.html  model-editor-profile.html  model-editor-settings.html  model-editor-string.html  model-editor-width.html  result-viewer-characteristics.html  result-viewer-curvature.html  result-viewer-stress.html  searchindex.js  solver-command-line.html  solver-file-formats.html  solver.html
gui/resources/docs/user-manual/build_html/: _appendix.html  _characteristics.html  _dimensions.html  _energy.html  _result_files.html  _result_viewer.html  _solver.html  _width.html
gui/resources/docs/user-manual/scripts/: python.py
gui/resources/icons/sources/breeze/: Readme.md
gui/resources/shaders/: BackgroundShader.frag  BackgroundShader.vert  ModelShader.vert
gui/source/post/: ComboPlot.cpp  ComboPlot.hpp  CurvaturePlot.cpp  CurvaturePlot.hpp  EnergyPlot.cpp  EnergyPlot.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  NumberGrid.cpp  OutputWidget.cpp  OutputWidget.hpp  ShapePlot.cpp  ShapePlot.hpp  Slider.cpp  StressPlot.cpp  StressPlot.hpp
gui/source/pre/: HelpMenu.cpp  HelpMenu.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  RecentFilesMenu.cpp  RecentFilesMenu.hpp  SimulationDialog.cpp  SimulationDialog.hpp  UnitDialog.cpp  UnitDialog.hpp
gui/source/pre/editdock/: EditDock.hpp
gui/source/pre/editdock/editors/: ArcSegmentEditor.cpp  ArcSegmentEditor.hpp  LineSegmentEditor.cpp  PropertyValueEditor.cpp  PropertyValueEditor.hpp  SegmentEditor.hpp  SpiralSegmentEditor.cpp  SplineSegmentEditor.cpp  SplineSegmentEditor.hpp
gui/source/pre/limbview/: LayerColors.hpp  LimbMesh.cpp  LimbMesh.hpp  LimbView.cpp  MaterialLegend.hpp  OpenGLUtils.cpp
gui/source/pre/plotdock/: PlotDock.hpp
gui/source/pre/plotdock/plots/: ProfileView.cpp  ProfileView.hpp  SplineView.cpp  SplineView.hpp
gui/source/pre/treedock/: TreeDock.cpp  TreeItem.cpp  TreeItem.hpp
gui/source/pre/treedock/items/: CommentTreeItem.cpp  CommentTreeItem.hpp  DampingTreeItem.cpp  DampingTreeItem.hpp  DimensionsTreeItem.cpp  DimensionsTreeItem.hpp  LayersTreeItem.cpp  LayersTreeItem.hpp  MassesTreeItem.cpp  MassesTreeItem.hpp  MaterialsTreeItem.cpp  MaterialsTreeItem.hpp  ProfileTreeItem.cpp  ProfileTreeItem.hpp  SettingsTreeItem.cpp  SettingsTreeItem.hpp  StringTreeItem.cpp  StringTreeItem.hpp  WidthTreeItem.cpp  WidthTreeItem.hpp
gui/source/pre/utils/: DoubleRange.hpp  IntegerRange.cpp  IntegerRange.hpp  ScrollArea.hpp  UserSettings.cpp  UserSettings.hpp
gui/source/pre/viewmodel/: ViewModel.cpp
gui/source/pre/viewmodel/units/: Quantity.cpp  Unit.hpp  UnitSystem.cpp
gui/source/pre/widgets/: DialogBase.cpp  DialogBase.hpp  DoubleSpinBox.cpp  DoubleSpinBox.hpp  EditableTabBar.hpp  IntegerSpinBox.cpp  IntegerSpinBox.hpp  PersistentDialog.cpp  PersistentDialog.hpp  PlotOverlayDialog.cpp  PlotOverlayDialog.hpp  TableDelegate.cpp  TableDelegate.hpp  TableEditor.hpp  TableModel.cpp  TableModel.hpp  TableView.cpp
gui/source/pre/widgets/propertytree/: PropertyDelegate.hpp  PropertyTreeItem.cpp  PropertyTreeItem.hpp  PropertyTreeWidget.hpp
gui/source/pre/widgets/qcustomplot/: qcustomplot.cpp  qcustomplot.h
gui/source/solver/model/: LimbProperties.hpp
gui/source/solver/model/input/: InputData.hpp
gui/source/solver/model/output/: BowStates.hpp  DynamicData.hpp  ModelStates.hpp  OutputData.cpp  OutputData.hpp  StaticData.hpp
gui/source/solver/model/output2/: OutputData2.cpp  OutputData2.hpp
gui/source/solver/model/profile/: ProfileSegment.hpp
gui/source/solver/numerics/: FindInterval.hpp  Linspace.hpp  Sorting.cpp  Utils.hpp
solver/: .gitignore  Cargo.toml
solver/bows/examples/: big-paddle-ash.bow
solver/bows/tests/: inconvertible.bow  invalid_json_1.bow  invalid_json_2.bow  invalid_msgpack_2.json  invalid_msgpack_2.res  invalid_version.json  invalid_version.res  invalid_version_1.bow  invalid_version_2.bow  new_version.bow  new_version.res  no_version.bow  no_version.res  old_version.bow  saved.bow  saved.json  saved.res
solver/bows/users/: 003 hybrid longbow with riser block.bow  2r77c5r2.bow  36d2b7az.bow  5y3n27ra.bow  69w865k9.bow  7263zcsk.bow  834ozgt0.bow  Am.1896-.444.bow  Goguryeo_hwarang2013.bow  Joshs bow.bow  Problematic model.bow  RAGIM_Black_Bear.bow  Wooden crossbow.bow  b282hcap.bow  cz183o6o.bow  ibp08w9x.bow  komposiitti 2.bow  mt22m5gs.bow  nv1x16ok.bow  v074x8zj.bow  virtuaalimassatesti.bow  w517u4bs.bow
solver/bows/versions/: README.md
solver/bows/versions/v0/: v0.bow  v1.bow  v2.bow  v3.bow
solver/bows/versions/v2/: v2.bow  v3.bow
solver/src/: bin.rs  lib.rs  main.rs
solver/src/bow/: compatibility.rs  errors.rs  input.rs  mod.rs  model.rs  output.rs  simulation.rs  versioning.rs
solver/src/bow/profile/: input.rs  mod.rs  profile.rs
solver/src/bow/profile/segments/: clothoid.rs  (+2 more)
solver/src/bow/sections/: mod.rs  section.rs
solver/src/fem/: mod.rs
solver/src/fem/elements/: bar.rs  beam.rs  mass.rs  mod.rs  string.rs
solver/src/fem/solvers/: dynamics.rs  eigen.rs  mod.rs  statics.rs
solver/src/fem/system/: dof.rs  element.rs  mod.rs  node.rs  nodes.rs  system.rs  views.rs
solver/src/numerics/: bisection.rs  cubic_spline.rs  differentiation.rs  functions.rs  geometry.rs  integration.rs  intervals.rs  linear_spline.rs  mod.rs  root_finding.rs  tridiagonal.rs
solver/src/tests/: mod.rs  test_00_command_line_interface.rs  test_01_element_properties.rs  test_02_static_trusses.rs  test_03_static_beams.rs  test_04_linear_oscillator.rs  test_05_example_bows.rs  test_05_nonlinear_oscillator.rs  test_06_example_bows.rs  test_07_string_damping.rs
solver/src/tests/utils/: checks.rs  mod.rs  plotter.rs
(+1076 files in other folders)
